# PersonalWebsite

./: .gitignore  Cargo.toml  README.md  Rocket.toml
.github/workflows/: backend_ci.yaml  ci_cd.yaml  frontend_ci.yaml  rust_ci.yaml  server_cd.yaml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: GlassCard.tsx  HealthStatus.tsx  P5Background.tsx  StarBackground.tsx
git_hooks/: pre-commit
src/: main.rs  tests.rs
static/: index.html  style.css
static/static/js/: main.bcd276fc.js.map
web/http/: index.html
webhook/: Cargo.toml
webhook/src/: main.rs
