[package]
name = "webhook"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = "0.4.40"
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.27"
openssl = "0.10.72"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
